<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/gray_700">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_1"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hnt_1"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_2"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hnt_2"
            android:inputType="number" />

        <Spinner
            android:id="@+id/sp1"
            android:layout_width="390dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#08D242"
            android:onClick="operaciones_ma"
            android:text="@string/btn_1"
            app:backgroundTint="@color/Btn_color" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_3"
            android:textSize="100sp"
            android:gravity="center"
            android:textStyle="bold"/>
    </LinearLayout>
</RelativeLayout>